--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Your Blog
-SEOTitle: 你的博客 | Your Blog
+title: sunnyliutong Blog
+SEOTitle: 刘通的博客 | sunnyliutong Blog
 header-img: img/home-bg.jpg
 email: huxpro@gmail.com
-description: ""
-keyword: ""
+description: "路漫漫其修远兮，吾将上下而求索"
+keyword: "刘通，sunnyliutong，Blog"
 url: "http://huangxuan.me"              # your host, for absolute URL
 baseurl: "/huxblog-boilerplate"         # for example, '/blog' if your blog hosted on 'host/blog'
 
@@ -12,11 +12,11 @@ baseurl: "/huxblog-boilerplate"         # for example, '/blog' if your blog host
 
 # SNS settings
 RSS: false
-weibo_username:     huxpro
-zhihu_username:     huxpro
-github_username:    huxpro
+weibo_username:     sunnyliutong
+zhihu_username:     sunnyliutong
+github_username:    EthanTongLIU
 #twitter_username:  huxpro
-facebook_username:  huxpro
+#facebook_username:  sunnyliutong
 
 
 
@@ -68,7 +68,7 @@ ga_domain: huangxuan.me
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "写写代码，做做设计，看看产品。世界那么大，多玩玩看看。"
+sidebar-about-description: "一个简单的人，一个平凡的人，一个不出彩的人。"
 sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
