修改博客标题

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: LiuTong Blog
+title: 肥雪的博客
 SEOTitle: 刘通的博客 | LiuTong Blog
 header-img: img/home-bg.jpg
 email: sunnyliutong@qq.com
