--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ ga_domain: huangxuan.me
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "路漫漫其修远兮，<br>吾将上下而求索"
-sidebar-avatar: /img/avatar-hux.jpg       # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/photo-self.jpg       # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
