修改背景图片

--- a/_config.yml
+++ b/_config.yml
@@ -92,5 +92,8 @@ friends: [
     # },{
         title: "Hux",
         href: "http://huangxuan.me"
+    },{
+        title: "Tom HU",
+        href: "http://www.bonjour-tom.cn/tom"
     }
 ]
