--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: 刘通的博客
-SEOTitle: 刘通的博客
+title: 刘通 de 博客
+SEOTitle: 刘通 de 博客
 header-img: img/home-bg-1.jpg
 email: sunnyliutong@qq.com
 description: "这里是 @刘通 的个人博客"
